# selfstream

./: .gitignore  Cargo.toml  config-example.toml  encoding.toml  index.html  nginx.conf  transcode.sh
src/: config.rs  db.rs  encoder.rs  main.rs  monitor.rs  probe.rs  types.rs  ws.rs
src/api/: btcpay.rs  mod.rs  pages.rs  rtmp.rs
src/tasks/: live_monitor.rs  mod.rs
static/: chat.js
templates/: index.hbs  watch-live.hbs  watch-published.hbs
templates/layouts/: main.hbs
templates/partials/: navbar.hbs
