[package]
name = "selfstream"
version = "0.1.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
rand = "0.7"
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "0.10"
futures = "0.3"
redis = { version = "0.15", features = ["tokio-rt-core"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
serde-xml-rs = { version = "0.4.0" }
toml = { version = "0.5" }
rocket = "0.4"
reqwest = "0.10"
async-trait = "0.1.30"
btcpay = { git = "https://github.com/afilini/rust-btcpay" }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]
